# oil-gas-futures-pipeline

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DOCKER_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PROGRESS_SUMMARY.md  QUICK_START_PLAN.md  README.md  TODO_UPDATED.md  celerybeat-schedule  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/futures/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/options/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/admin/: AddUserModal.tsx  DeleteUserConfirmationModal.tsx  EditUserModal.tsx  UserManagementTable.tsx
frontend/src/components/auth/: AdminRouteGuard.tsx
frontend/src/components/dashboard/: Alerts.tsx  FuturesPriceGrid.tsx  KeyMetrics.tsx  OptionsAnalyticsDisplay.tsx  SystemStatus.tsx
frontend/src/components/futures/: HistoricalFuturesChart.tsx
frontend/src/contexts/: AuthContext.tsx
scripts/: demo_iv_calculation.py  setup_db.py  volatility_smile.py
src/: api_server.py  celery_app.py  tasks.py
src/analytics/: __init__.py
src/analytics/options_pricing/: __init__.py  black_scholes.py  implied_vol.py
src/api/: main.py  models.py
src/api/routes/: __init__.py  auth.py  futures.py  options.py  system.py  users.py
src/core/: logging_config.py  validators.py
src/ingestion/: __init__.py  yahoo_finance.py
src/pipeline/: __init__.py  ingestion_pipeline.py  models.py
src/storage/: __init__.py  database.py  operations.py  schemas.py
tests/: __init__.py  test_api_auth.py  test_api_futures.py  test_api_options.py  test_api_system.py  test_black_scholes.py  test_implied_vol.py
