[project]
name = "oil-gas-futures-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage>=3.0.0",
    "apscheduler>=3.11.0",
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "hypothesis>=6.131.27",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "structlog>=25.3.0",
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
    "bcrypt>=4.3.0",
    "pyjwt>=2.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
lint.ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and relative imports
"tests/*" = ["S101", "TID252"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"
